# Geometry

./: CMakeLists.txt  IShape.h  README.md  circle.cpp  circle.h  line.cpp  line.h  point.cpp  point.h  polygon.cpp  polygon.h  ray.cpp  ray.h  segment.cpp  segment.h  vector.cpp  vector.h
